# hospital-finder-assistant

./: .gitignore  DOCUMENTATION.md  README.md  app.py  pyproject.toml  rag_retrieve.py  requirements.txt
agents/: agent_tools.py  hospital_graph.py
agents/v1/: hospital_graph_v1.py
config/: client.py  config.py
data/: hospitals.sqlite  insurance_data.json
data/rag_llm/: README.md  tokenizer_config.json
data/rag_llm/checkpoint-100/: adapter_model.safetensors  rng_state.pth  scheduler.pt  trainer_state.json
data/rag_llm/checkpoint-105/: adapter_config.json  adapter_model.safetensors  rng_state.pth  scheduler.pt  trainer_state.json
data/rag_llm/checkpoint-150/: adapter_config.json  rng_state.pth  scaler.pt  scheduler.pt  tokenizer.json  trainer_state.json
data/rag_llm/checkpoint-174/: README.md  adapter_config.json  rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
data/rag_llm/checkpoint-550/: rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
data/rag_llm/checkpoint-567/: adapter_config.json  rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
data/rag_llm/checkpoint-800/: adapter_config.json  rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
data/rag_llm/checkpoint-849/: rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
data/rag_llm/checkpoint-9/: adapter_model.safetensors  rng_state.pth  scheduler.pt  trainer_state.json
data/vdb_hospitals/: index.faiss  index.pkl
db/: db.py  fine_tune.py  hospital_generator.py  insurance_data.json  models.py  vector_db_generator.py
db/modules/: fine_tune.py  fine_tune_data_generator.py  fine_tuner.py  hospital_generator.py  insurance_generator.py  vector_db_generator.py
docs/: DOCUMENTATION.md  SOURCE_CODE_DOCUMENTATION.md
graphs/: graph_tools.py  hospital_graph.py
graphs/v1/: hospital_graph_v1.py
prompts/: prompts.py
settings/: config.py  logger.py  prompts.py
tools/: hospital_lookup.py  rag_retrieve.py  recognize.py  record.py  text_to_speech.py  transcribe.py
utils/: utils.py
