[project]
name = "ai-voice-bot-hospital"
version = "0.1.0"
description = "A voice bot for hospital interactions"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "blis==0.7.11",
    "catalogue==2.0.10",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.3",
    "click==8.3.0",
    "cloudpathlib==0.23.0",
    "colorama==0.4.6",
    "confection==0.1.5",
    "cymem==2.0.11",
    "distro==1.9.0",
    "dotenv==0.9.9",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",
    "ffmpeg-python==0.2.0",
    "filelock==3.13.1",
    "fsspec==2024.6.1",
    "future==1.0.0",
    "geographiclib==2.1",
    "geopy==2.4.1",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "jinja2==3.1.6",
    "jiter==0.11.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain==0.3.27",
    "langchain-core==0.3.79",
    "langchain-openai==0.3.35",
    "langchain-text-splitters==0.3.11",
    "langcodes==3.5.0",
    "langgraph==0.6.10",
    "langgraph-checkpoint==2.1.2",
    "langgraph-prebuilt==0.6.4",
    "langgraph-sdk==0.2.9",
    "langsmith==0.4.34",
    "language-data==1.3.0",
    "llvmlite==0.45.1",
    "marisa-trie==1.3.1",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "more-itertools==10.8.0",
    "mpmath==1.3.0",
    "murmurhash==1.0.13",
    "networkx==3.3",
    "numba==0.62.1",
    "numpy==1.26.4",
    "openai==2.3.0",
    "openai-whisper @ git+https://github.com/openai/whisper.git@c0d2f624c09dc18e709e37c2ad90c039a4eb72a2",
    "orjson==3.11.3",
    "ormsgpack==1.11.0",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==11.0.0",
    "pony==0.7.19",
    "preshed==3.0.10",
    "pyaudio==0.2.14",
    "pydantic==2.12.0",
    "pydantic-core==2.41.1",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "rapidfuzz==3.14.1",
    "regex==2025.9.18",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "rich==14.2.0",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smart-open==7.3.1",
    "sniffio==1.3.1",
    "spacy==3.7.5",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    "sqlalchemy==2.0.44",
    "srsly==2.5.1",
    "sympy==1.13.1",
    "tenacity==9.1.2",
    "thinc==8.2.5",
    "tiktoken==0.12.0",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
    "tqdm==4.67.1",
    "typer==0.19.2",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "wasabi==1.1.3",
    "weasel==0.4.1",
    "whisper==1.1.10",
    "wrapt==1.17.3",
    "xxhash==3.6.0",
    "zstandard==0.25.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["db", "data", "agents", "audios", "config", "outputs", "prompts"]